Graphic modifications Correction of some errors on the main page Deletion of one unused javascript file

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
             <div class="jumbotron page-header row">
                 <h5 class="col title">2017-2020
-                    < hr>
+                    <hr>
                     Mines Saint-Etienne
                 </h5>
                 <div class="col-2">
@@ -245,7 +245,7 @@
                             <h5 class="card-title">3 languages</h5>
                             <p class="card-text" style="text-indent: 0; text-align: left">I am proficient in
                                 <strong>English</strong> (920 TOEIC score) and <strong>French</strong>
-                                (native language)</p>
+                                (native language), and I am currently learning Portuguese.</p>
                         </div>
                     </div>
                 </div>
