Removed zoom effect on hoover Swapped right and left columns in the "About Me" section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </div>
 
-<div class="background-1">
+<div class="background-1 parallax-effect">
     <div class="jumbotron-fluid" id="intro" style="padding: 1%;">
         <h1 class="display-5 cutout" style="font-size: 3vmax;">Hi I'm Jean-Christophe, and this is my website</h1>
         <p class="cutout" style="font-size: 1.2vmax;">I am studying Computer Science at Mines
@@ -72,12 +72,78 @@
     <h1 class="display-4">About me</h1>
     <p class="my-5">
         Currently studying Computer Science at <strong>Mines Saint-Etienne</strong>, a French "Grande Ecole", I am
-        looking for a <strong>6 months end-of-studies internship</strong>.
+        looking for a <strong>6 months end-of-studies internship</strong>, starting April 1st.
         Naturally curious and interested by new techs, I led some personal projects to get a better overall knowledge on
         many programming languages, methods and techs.
     </p>
 
     <div class="row">
+        <div class="col-sm-6">
+            <h2 class="display-5">Graduation</h2>
+            <hr>
+
+            <div class="jumbotron page-header row">
+                <h5 class="col title">2017-2020
+                    <hr>
+                    Mines Saint-Etienne
+                </h5>
+                <div class="col-2">
+                    <img alt="" class="img-fluid" src="img/EMSE%20icon.png"/>
+                </div>
+            </div>
+            <p>
+                Mines de Saint-Etienne is a <strong>French Engineering School</strong> that provides various courses in
+                Computer Science. This education has given me abilities in many CS fields, such as:
+            </p>
+            <ul>
+                <li>Procedural Programming</li>
+                <li>Oriented Object Programming</li>
+                <li>Cryptography</li>
+                <li>Database management</li>
+                <li>Networks solutions</li>
+            </ul>
+            <p style="margin: 0">
+                I also had the opportunity to develop some management skills. Thanks to the project-based way of
+                teaching, I acquired notions in <strong>team-working</strong>, <strong>project management</strong> and
+                <strong>issues management</strong>.
+            </p>
+            <div class="achievements row">
+
+                <div class="col-md-6 stats">
+                    <div class="card">
+                        <img alt="" class="img-fluid" src="img/diploma%20icon.png">
+                        <div class="card-body">
+                            <h5 class="card-title">3.31 GPA</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 stats">
+                    <div class="card">
+                        <img alt="" class="img-fluid" src="img/earth%20icon.png">
+                        <div class="card-body">
+                            <h5 class="card-title">2 languages</h5>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="jumbotron page-header row">
+                <h5 class="col title">2015-2017
+                    <hr>
+                    Preparatory classes for Engineering Schools
+                </h5>
+            </div>
+            <p>
+                During these two years, I attended <strong>intense</strong> and <strong>high-level theoretical
+                courses</strong> in mathematics, physics and chemistry, with a view to prepare for the French <strong>"Grandes
+                Ecoles"</strong> integration exams. What I have learned from it is an ease and a way of learning, that I
+                use to quickly acquire and understand concepts.
+            </p>
+
+        </div>
+
         <div class="col-sm-6">
 
             <h2 class="display-5">My skills</h2>
@@ -196,80 +262,10 @@
                 </div>
             </div>
         </div>
-
-        <div class="col-sm-6">
-            <h2 class="display-5">Graduation</h2>
-            <hr>
-
-            <div class="jumbotron page-header row">
-                <h5 class="col title">2017-2020
-                    <hr>
-                    Mines Saint-Etienne
-                </h5>
-                <div class="col-2">
-                    <img alt="" class="img-fluid" src="img/EMSE%20icon.png"/>
-                </div>
-            </div>
-            <p>
-                Mines de Saint-Etienne is a <strong>French Engineering School</strong> that provides various courses in
-                Computer Science. This education has given me abilities in many CS fields, such as:
-            </p>
-            <ul>
-                <li>Procedural Programming</li>
-                <li>Oriented Object Programming</li>
-                <li>Cryptography</li>
-                <li>Database management</li>
-                <li>Networks solutions</li>
-            </ul>
-            <p style="margin: 0">
-                I also had the opportunity to develop some management skills. Thanks to the project-based way of
-                teaching, I acquired notions in <strong>team-working</strong>, <strong>project management</strong> and
-                <strong>issues management</strong>.
-            </p>
-            <div class="achievements row">
-
-                <div class="col-md-6 stats">
-                    <div class="card">
-                        <img alt="" class="img-fluid" src="img/diploma%20icon.png">
-                        <div class="card-body">
-                            <h5 class="card-title">3.31 GPA</h5>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-md-6 stats">
-                    <div class="card">
-                        <img alt="" class="img-fluid" src="img/earth%20icon.png">
-                        <div class="card-body">
-                            <h5 class="card-title">3 languages</h5>
-                            <p class="card-text" style="text-indent: 0; text-align: left">I am proficient in
-                                <strong>English</strong> (920 TOEIC score) and <strong>French</strong>
-                                (native language), and I am currently learning Portuguese.</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="jumbotron page-header row">
-                <h5 class="col title">2015-2017
-                    <hr>
-                    Preparatory classes for Engineering Schools
-                </h5>
-            </div>
-            <p>
-                During these two years, I attended <strong>intense</strong> and <strong>high-level theoretical
-                courses</strong> in mathematics, physics and chemistry, with a view to prepare for the French <strong>"Grandes
-                Ecoles"</strong> integration exams. What I have learned from it is an ease and a way of learning, that I
-                use to quickly acquire and understand concepts.
-            </p>
-
-        </div>
     </div>
 </div>
 
-<div class="background-2"></div>
+<div class="background-2 parallax-effect"></div>
 
 <div class="jumbotron-fluid" id="my-experience">
     <h1 class="display-4 white-on-black">My experience</h1>
