Modification of css and js files' tree structure Some minor graphical updates

--- a/index.html
+++ b/index.html
@@ -16,21 +16,26 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css_js/style.css" rel="stylesheet"/>
-    <link href="css_js/social_icons.css" rel="stylesheet"/>
-    <link href="css_js/scrollbar.css" rel="stylesheet"/>
-    <link href="css_js/skills.css" rel="stylesheet"/>
-    <link href="css_js/graduation.css" rel="stylesheet"/>
-    <link href="css_js/experience.css" rel="stylesheet"/>
-    <link href="css_js/forms.css" rel="stylesheet"/>
-    <link href="css_js/on_mobile.css" rel="stylesheet"/>
-    <link href="css_js/loader.css" rel="stylesheet"/>
+
+    <link href="css_js/css_files/style.css" rel="stylesheet"/>
+    <link href="css_js/css_files/social_icons.css" rel="stylesheet"/>
+    <link href="css_js/css_files/scrollbar.css" rel="stylesheet"/>
+    <link href="css_js/css_files/skills.css" rel="stylesheet"/>
+    <link href="css_js/css_files/graduation.css" rel="stylesheet"/>
+    <link href="css_js/css_files/experience.css" rel="stylesheet"/>
+    <link href="css_js/css_files/forms.css" rel="stylesheet"/>
+    <link href="css_js/css_files/on_mobile.css" rel="stylesheet"/>
+    <link href="css_js/css_files/loader.css" rel="stylesheet"/>
+    <link href="css_js/css_files/background.css" rel="stylesheet"/>
+    <link href="css_js/css_files/about_me.css" rel="stylesheet"/>
+    <link href="css_js/css_files/intro.css" rel="stylesheet"/>
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200|Quicksand" rel="stylesheet">
 
+    <script src="css_js/js_files/loading.js"></script>
+
 </head>
 
-<script src="css_js/loading.js"></script>
 
 <body data-spy="scroll" data-target="#navbar" style="overflow: hidden;">
 
@@ -269,12 +274,10 @@
 
 <div class="jumbotron-fluid" id="my-experience">
     <h1 class="display-4 white-on-black">My experience</h1>
-    <div class="container">
-        <p class="my-5 white-on-black">
-            During my training, I had the opportunity to participate in projects proposed by professionals, but also to
-            get involved in a university association with a pedagogical aim.
-        </p>
-    </div>
+    <p class="my-5 white-on-black">
+        During my training, I had the opportunity to participate in projects proposed by professionals, but also to
+        get involved in a university association with a pedagogical aim.
+    </p>
 
     <div class="row">
 
@@ -440,9 +443,9 @@
 <script crossorigin="anonymous"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="css_js/form.js"></script>
-<script src="css_js/navbar.js"></script>
-<script src="css_js/social_medias.js"></script>
+<script src="css_js/js_files/form.js"></script>
+<script src="css_js/js_files/navbar.js"></script>
+<script src="css_js/js_files/social_medias.js"></script>
 
 </body>
 
